--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-redux": "^8.0.5",
     "recharts": "^2.4.3",
     "sass": "^1.58.3",
     "typescript": "4.9.5",
