--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "recharts": "^2.4.3",
+    "redux-persist": "^6.0.0",
     "sass": "^1.58.3",
     "typescript": "4.9.5",
     "yup": "^1.1.1"
