--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.4.0",
+    "html-to-image": "^1.11.11",
     "js-cookie": "^3.0.5",
     "next": "13.2.3",
     "react": "18.2.0",
