--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.4.0",
     "html-to-image": "^1.11.11",
+    "i18next": "^22.5.0",
     "js-cookie": "^3.0.5",
     "next": "13.2.3",
+    "next-i18next": "^13.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.3.1",
+    "react-intl": "^6.4.2",
     "react-redux": "^8.0.5",
     "recharts": "^2.4.3",
     "redux-persist": "^6.0.0",
